--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -28,7 +28,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginEnd="0dp"
             app:labelVisibilityMode="selected"
-            android:background="?android:attr/windowBackground"
+            android:background="?android:attr/colorBackground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
