--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
     <color name="primary">#2DFF74</color>
-    
-    <color name="base">#2B2930</color>
+    <color name="secondary">#4A4458</color>
+
+    <color name="base">#1E1C22</color>
+    <color name="accent">#FFE70E</color>
 </resources>
