--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,19 +13,19 @@
 
     <fragment
         android:id="@+id/navigation_history"
-        android:name="com.zexceed.aniflix.ui.dashboard.HistoryFragment"
+        android:name="com.zexceed.aniflix.ui.history.HistoryFragment"
         android:label="@string/title_history"
         tools:layout="@layout/fragment_history" />
 
     <fragment
         android:id="@+id/navigation_animelist"
-        android:name="com.zexceed.aniflix.ui.notifications.AnimeListFragment"
+        android:name="com.zexceed.aniflix.ui.animelist.AnimeListFragment"
         android:label="@string/title_mylist"
         tools:layout="@layout/fragment_animelist" />
 
     <fragment
         android:id="@+id/navigation_settings"
-        android:name="com.zexceed.aniflix.ui.notifications.AnimeListFragment"
+        android:name="com.zexceed.aniflix.ui.animelist.AnimeListFragment"
         android:label="@string/title_settings"
         tools:layout="@layout/fragment_setting" />
 
