--- a/app/src/main/res/layout/fragment_complete.xml
+++ b/app/src/main/res/layout/fragment_complete.xml
@@ -46,9 +46,13 @@
         android:id="@+id/rv_complete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
         app:spanCount="3"
-        tools:listitem="@layout/item_complete_vetical"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />
+        tools:listitem="@layout/item_complete_vetical" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
