--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,7 @@
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorSecondary">@color/secondary</item>
+        <item name="colorAccent">@color/accent</item>
     </style>
 
     <style name="Theme.AniFlix" parent="Base.Theme.AniFlix" />
