--- a/app/src/main/res/layout/activity_anime_detail.xml
+++ b/app/src/main/res/layout/activity_anime_detail.xml
@@ -48,7 +48,7 @@
         android:layout_marginStart="8dp"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="?attr/colorPrimary"
+        android:textColor="?attr/colorAccent"
         android:maxLines="2"
         android:ellipsize="end"
         tools:text="On-going"
