--- a/app/src/main/res/layout/activity_anime_detail.xml
+++ b/app/src/main/res/layout/activity_anime_detail.xml
@@ -81,9 +81,10 @@
         android:id="@+id/rv_episode"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
+        android:paddingHorizontal="12dp"
+        android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,9 +95,10 @@
         android:id="@+id/rv_genre"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
+        android:paddingHorizontal="12dp"
+        android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
