--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,9 +58,10 @@
                 android:id="@+id/rv_ongoing"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="24dp"
                 android:orientation="horizontal"
+                android:paddingHorizontal="8dp"
+                android:clipToPadding="false"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -82,9 +83,10 @@
                 android:id="@+id/rv_complete"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="24dp"
                 android:orientation="horizontal"
+                android:paddingHorizontal="8dp"
+                android:clipToPadding="false"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintStart_toStartOf="@+id/textView3"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
