res/colors: change primary color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="primary">#2DFF74</color>
+    <color name="primary">#FFE70E</color>
     <color name="secondary">#4A4458</color>
 
     <color name="base">#1E1C22</color>
