--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -17,8 +17,8 @@
         android:title="@string/title_mylist" />
 
     <item
-        android:id="@+id/navigation_settings"
-        android:icon="@drawable/outline_settings_24"
-        android:title="@string/title_settings" />
+        android:id="@+id/navigation_schedule"
+        android:icon="@drawable/ic_calendar_month_24"
+        android:title="@string/title_schedule" />
 
 </menu>
