--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -31,10 +31,10 @@
         tools:layout="@layout/fragment_animelist" />
 
     <fragment
-        android:id="@+id/navigation_settings"
-        android:name="com.zexceed.aniflix.ui.animelist.AnimeListFragment"
-        android:label="@string/title_settings"
-        tools:layout="@layout/fragment_setting" />
+        android:id="@+id/navigation_schedule"
+        android:name="com.zexceed.aniflix.ui.home.schedule.FragmentSchedule"
+        android:label="@string/title_schedule"
+        tools:layout="@layout/fragment_schedule" />
     <fragment
         android:id="@+id/ongoingFragment"
         android:name="com.zexceed.aniflix.ui.home.ongoing.OngoingFragment"
