--- a/app/src/main/res/layout/activity_anime_detail.xml
+++ b/app/src/main/res/layout/activity_anime_detail.xml
@@ -136,4 +136,19 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <com.google.android.material.chip.Chip
+        android:id="@+id/chipSynopsisError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Synopsis not available"
+        android:visibility="gone"
+        app:chipCornerRadius="28dp"
+        app:chipIcon="@drawable/ic_error_outline_24"
+        app:chipStrokeWidth="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rv_genre"
+        app:layout_constraintVertical_bias="0.25" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
