--- a/app/src/main/res/layout/activity_genre.xml
+++ b/app/src/main/res/layout/activity_genre.xml
@@ -58,4 +58,15 @@
         app:spanCount="3"
         tools:listitem="@layout/item_genre_vertical" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
