--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -60,4 +60,29 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar2"
         tools:listitem="@layout/item_search" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/rv_search_result" />
+
+    <com.google.android.material.chip.Chip
+        android:id="@+id/chipError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Search not found"
+        android:visibility="gone"
+        app:chipCornerRadius="28dp"
+        app:chipIcon="@drawable/ic_error_outline_24"
+        app:chipStrokeWidth="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/rv_search_result" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
