res/colors.xml: transparent color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="base">#1E1C22</color>
     <color name="accent">#FFE70E</color>
 
-    <color name="transparent">#FFFFFF</color>
+    <color name="transparent">#00000000</color>
 </resources>
